# agentdesk

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.py  main.py  pyproject.toml
agents/: orchestrator.py  rag_agent.py  tool_agent.py
core/: memory.py  rag.py  tools.py
data/knowledge_base/: sprint_14.txt  team_handbook.txt
providers/: llm.py  vector_store.py
tests/: test_core.py
